v1.1.0/modules/schema/pages/class/WindTurbineType3IEC.adoc
= `WindTurbineType3IEC`
:toclevels: 4


+++Parent class supporting relationships to IEC wind turbines type 3 including their control models.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:WindTurbineType3IEC`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/WindTurbineType3or4Dynamics.adoc[`WindTurbineType3or4Dynamics`]
**** xref::class/WindTurbineType3or4IEC.adoc[`WindTurbineType3or4IEC`]
***** *`WindTurbineType3IEC`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<WindAeroOneDimIEC,`WindAeroOneDimIEC`>>
//| [[slots_table.WindAeroOneDimIEC]]<<WindAeroOneDimIEC,`WindAeroOneDimIEC`>>
| 0..1 +
xref::class/WindAeroOneDimIEC.adoc[`WindAeroOneDimIEC`]
| +++Wind aerodynamic model associated with this wind generator type 3 model.+++
| _n/a_

| <<WindAeroTwoDimIEC,`WindAeroTwoDimIEC`>>
//| [[slots_table.WindAeroTwoDimIEC]]<<WindAeroTwoDimIEC,`WindAeroTwoDimIEC`>>
| 0..1 +
xref::class/WindAeroTwoDimIEC.adoc[`WindAeroTwoDimIEC`]
| +++Wind aerodynamic model associated with this wind turbine type 3 model.+++
| _n/a_

| <<WindContPType3IEC,`WindContPType3IEC`>>
//| [[slots_table.WindContPType3IEC]]<<WindContPType3IEC,`WindContPType3IEC`>>
| 1 +
xref::class/WindContPType3IEC.adoc[`WindContPType3IEC`]
| +++Wind control P type 3 model associated with this wind turbine type 3 model.+++
| _n/a_

| <<WindContPitchAngleIEC,`WindContPitchAngleIEC`>>
//| [[slots_table.WindContPitchAngleIEC]]<<WindContPitchAngleIEC,`WindContPitchAngleIEC`>>
| 1 +
xref::class/WindContPitchAngleIEC.adoc[`WindContPitchAngleIEC`]
| +++Wind control pitch angle model associated with this wind turbine type 3.+++
| _n/a_

| <<WindGenType3IEC,`WindGenType3IEC`>>
//| [[slots_table.WindGenType3IEC]]<<WindGenType3IEC,`WindGenType3IEC`>>
| 0..1 +
xref::class/WindGenType3IEC.adoc[`WindGenType3IEC`]
| +++Wind generator type 3 model associated with this wind turbine type 3 model.+++
| _n/a_

| <<WindMechIEC,`WindMechIEC`>>
//| [[slots_table.WindMechIEC]]<<WindMechIEC,`WindMechIEC`>>
| 1 +
xref::class/WindMechIEC.adoc[`WindMechIEC`]
| +++Wind mechanical model associated with this wind turbine type 3 model.+++
| _n/a_

| <<WIndContQIEC,`WIndContQIEC`>>
//| [[slots_table.WIndContQIEC]]<<WIndContQIEC,`WIndContQIEC`>>
| 1 +
xref::class/WindContQIEC.adoc[`WindContQIEC`]
| +++Wind control Q model associated with this wind turbine type 3 or type 4 model.+++
| xref::class/WindTurbineType3or4IEC.adoc[`WindTurbineType3or4IEC`]

| <<WindContCurrLimIEC,`WindContCurrLimIEC`>>
//| [[slots_table.WindContCurrLimIEC]]<<WindContCurrLimIEC,`WindContCurrLimIEC`>>
| 1 +
xref::class/WindContCurrLimIEC.adoc[`WindContCurrLimIEC`]
| +++Wind control current limitation model associated with this wind turbine type 3 or type 4 model.+++
| xref::class/WindTurbineType3or4IEC.adoc[`WindTurbineType3or4IEC`]

| <<WindContQLimIEC,`WindContQLimIEC`>>
//| [[slots_table.WindContQLimIEC]]<<WindContQLimIEC,`WindContQLimIEC`>>
| 0..1 +
xref::class/WindContQLimIEC.adoc[`WindContQLimIEC`]
| +++Constant Q limitation model associated with this wind generator type 3 or type 4 model.+++
| xref::class/WindTurbineType3or4IEC.adoc[`WindTurbineType3or4IEC`]

| <<WindContQPQULimIEC,`WindContQPQULimIEC`>>
//| [[slots_table.WindContQPQULimIEC]]<<WindContQPQULimIEC,`WindContQPQULimIEC`>>
| 0..1 +
xref::class/WindContQPQULimIEC.adoc[`WindContQPQULimIEC`]
| +++QP and QU limitation model associated with this wind generator type 3 or type 4 model.+++
| xref::class/WindTurbineType3or4IEC.adoc[`WindTurbineType3or4IEC`]

| <<WindProtectionIEC,`WindProtectionIEC`>>
//| [[slots_table.WindProtectionIEC]]<<WindProtectionIEC,`WindProtectionIEC`>>
| 1 +
xref::class/WindProtectionIEC.adoc[`WindProtectionIEC`]
| +++Wind turbune protection model associated with this wind generator type 3 or type 4 model.+++
| xref::class/WindTurbineType3or4IEC.adoc[`WindTurbineType3or4IEC`]

| <<WindRefFrameRotIEC,`WindRefFrameRotIEC`>>
//| [[slots_table.WindRefFrameRotIEC]]<<WindRefFrameRotIEC,`WindRefFrameRotIEC`>>
| 1 +
xref::class/WindRefFrameRotIEC.adoc[`WindRefFrameRotIEC`]
| +++Reference frame rotation model associated with this wind turbine type 3 or type 4 model.+++
| xref::class/WindTurbineType3or4IEC.adoc[`WindTurbineType3or4IEC`]

| <<PowerElectronicsConnection,`PowerElectronicsConnection`>>
//| [[slots_table.PowerElectronicsConnection]]<<PowerElectronicsConnection,`PowerElectronicsConnection`>>
| 1 +
xref::class/PowerElectronicsConnection.adoc[`PowerElectronicsConnection`]
| +++The power electronics connection associated with this wind turbine type 3 or type 4 dynamics model.+++
| xref::class/WindTurbineType3or4Dynamics.adoc[`WindTurbineType3or4Dynamics`]

| <<RemoteInputSignal,`RemoteInputSignal`>>
//| [[slots_table.RemoteInputSignal]]<<RemoteInputSignal,`RemoteInputSignal`>>
| 0..1 +
xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]
| +++Remote input signal used by these wind turbine type 3 or type 4 models.+++
| xref::class/WindTurbineType3or4Dynamics.adoc[`WindTurbineType3or4Dynamics`]

| <<WindPlantDynamics,`WindPlantDynamics`>>
//| [[slots_table.WindPlantDynamics]]<<WindPlantDynamics,`WindPlantDynamics`>>
| 0..1 +
xref::class/WindPlantDynamics.adoc[`WindPlantDynamics`]
| +++The wind plant with which the wind turbines type 3 or type 4 are associated.+++
| xref::class/WindTurbineType3or4Dynamics.adoc[`WindTurbineType3or4Dynamics`]

| <<enabled,`enabled`>>
//| [[slots_table.enabled]]<<enabled,`enabled`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

////
[.text-left]
--
<<slots_table.enabled,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PowerElectronicsConnection]
=== `PowerElectronicsConnection`
+++The power electronics connection associated with this wind turbine type 3 or type 4 dynamics model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindTurbineType3or4Dynamics.PowerElectronicsConnection`
| Cardinality
| 1
| Type
| xref::class/PowerElectronicsConnection.adoc[`PowerElectronicsConnection`]

| Inherited from
| xref::class/WindTurbineType3or4Dynamics.adoc[`WindTurbineType3or4Dynamics`]


|===

////
[.text-left]
--
<<slots_table.PowerElectronicsConnection,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#RemoteInputSignal]
=== `RemoteInputSignal`
+++Remote input signal used by these wind turbine type 3 or type 4 models.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindTurbineType3or4Dynamics.RemoteInputSignal`
| Cardinality
| 0..1
| Type
| xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]

| Inherited from
| xref::class/WindTurbineType3or4Dynamics.adoc[`WindTurbineType3or4Dynamics`]


|===

////
[.text-left]
--
<<slots_table.RemoteInputSignal,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#WindAeroOneDimIEC]
=== `WindAeroOneDimIEC`
+++Wind aerodynamic model associated with this wind generator type 3 model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindTurbineType3IEC.WindAeroOneDimIEC`
| Cardinality
| 0..1
| Type
| xref::class/WindAeroOneDimIEC.adoc[`WindAeroOneDimIEC`]


|===

////
[.text-left]
--
<<slots_table.WindAeroOneDimIEC,&#10548;>>
--
////


//[discrete]
[#WindAeroTwoDimIEC]
=== `WindAeroTwoDimIEC`
+++Wind aerodynamic model associated with this wind turbine type 3 model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindTurbineType3IEC.WindAeroTwoDimIEC`
| Cardinality
| 0..1
| Type
| xref::class/WindAeroTwoDimIEC.adoc[`WindAeroTwoDimIEC`]


|===

////
[.text-left]
--
<<slots_table.WindAeroTwoDimIEC,&#10548;>>
--
////


//[discrete]
[#WindContCurrLimIEC]
=== `WindContCurrLimIEC`
+++Wind control current limitation model associated with this wind turbine type 3 or type 4 model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindTurbineType3or4IEC.WindContCurrLimIEC`
| Cardinality
| 1
| Type
| xref::class/WindContCurrLimIEC.adoc[`WindContCurrLimIEC`]

| Inherited from
| xref::class/WindTurbineType3or4IEC.adoc[`WindTurbineType3or4IEC`]


|===

////
[.text-left]
--
<<slots_table.WindContCurrLimIEC,&#10548;>>
--
////


//[discrete]
[#WindContPitchAngleIEC]
=== `WindContPitchAngleIEC`
+++Wind control pitch angle model associated with this wind turbine type 3.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindTurbineType3IEC.WindContPitchAngleIEC`
| Cardinality
| 1
| Type
| xref::class/WindContPitchAngleIEC.adoc[`WindContPitchAngleIEC`]


|===

////
[.text-left]
--
<<slots_table.WindContPitchAngleIEC,&#10548;>>
--
////


//[discrete]
[#WindContPType3IEC]
=== `WindContPType3IEC`
+++Wind control P type 3 model associated with this wind turbine type 3 model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindTurbineType3IEC.WindContPType3IEC`
| Cardinality
| 1
| Type
| xref::class/WindContPType3IEC.adoc[`WindContPType3IEC`]


|===

////
[.text-left]
--
<<slots_table.WindContPType3IEC,&#10548;>>
--
////


//[discrete]
[#WIndContQIEC]
=== `WIndContQIEC`
+++Wind control Q model associated with this wind turbine type 3 or type 4 model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindTurbineType3or4IEC.WIndContQIEC`
| Cardinality
| 1
| Type
| xref::class/WindContQIEC.adoc[`WindContQIEC`]

| Inherited from
| xref::class/WindTurbineType3or4IEC.adoc[`WindTurbineType3or4IEC`]


|===

////
[.text-left]
--
<<slots_table.WIndContQIEC,&#10548;>>
--
////


//[discrete]
[#WindContQLimIEC]
=== `WindContQLimIEC`
+++Constant Q limitation model associated with this wind generator type 3 or type 4 model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindTurbineType3or4IEC.WindContQLimIEC`
| Cardinality
| 0..1
| Type
| xref::class/WindContQLimIEC.adoc[`WindContQLimIEC`]

| Inherited from
| xref::class/WindTurbineType3or4IEC.adoc[`WindTurbineType3or4IEC`]


|===

////
[.text-left]
--
<<slots_table.WindContQLimIEC,&#10548;>>
--
////


//[discrete]
[#WindContQPQULimIEC]
=== `WindContQPQULimIEC`
+++QP and QU limitation model associated with this wind generator type 3 or type 4 model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindTurbineType3or4IEC.WindContQPQULimIEC`
| Cardinality
| 0..1
| Type
| xref::class/WindContQPQULimIEC.adoc[`WindContQPQULimIEC`]

| Inherited from
| xref::class/WindTurbineType3or4IEC.adoc[`WindTurbineType3or4IEC`]


|===

////
[.text-left]
--
<<slots_table.WindContQPQULimIEC,&#10548;>>
--
////


//[discrete]
[#WindGenType3IEC]
=== `WindGenType3IEC`
+++Wind generator type 3 model associated with this wind turbine type 3 model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindTurbineType3IEC.WindGenType3IEC`
| Cardinality
| 0..1
| Type
| xref::class/WindGenType3IEC.adoc[`WindGenType3IEC`]


|===

////
[.text-left]
--
<<slots_table.WindGenType3IEC,&#10548;>>
--
////


//[discrete]
[#WindMechIEC]
=== `WindMechIEC`
+++Wind mechanical model associated with this wind turbine type 3 model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindTurbineType3IEC.WindMechIEC`
| Cardinality
| 1
| Type
| xref::class/WindMechIEC.adoc[`WindMechIEC`]


|===

////
[.text-left]
--
<<slots_table.WindMechIEC,&#10548;>>
--
////


//[discrete]
[#WindPlantDynamics]
=== `WindPlantDynamics`
+++The wind plant with which the wind turbines type 3 or type 4 are associated.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindTurbineType3or4Dynamics.WindPlantDynamics`
| Cardinality
| 0..1
| Type
| xref::class/WindPlantDynamics.adoc[`WindPlantDynamics`]

| Inherited from
| xref::class/WindTurbineType3or4Dynamics.adoc[`WindTurbineType3or4Dynamics`]


|===

////
[.text-left]
--
<<slots_table.WindPlantDynamics,&#10548;>>
--
////


//[discrete]
[#WindProtectionIEC]
=== `WindProtectionIEC`
+++Wind turbune protection model associated with this wind generator type 3 or type 4 model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindTurbineType3or4IEC.WindProtectionIEC`
| Cardinality
| 1
| Type
| xref::class/WindProtectionIEC.adoc[`WindProtectionIEC`]

| Inherited from
| xref::class/WindTurbineType3or4IEC.adoc[`WindTurbineType3or4IEC`]


|===

////
[.text-left]
--
<<slots_table.WindProtectionIEC,&#10548;>>
--
////


//[discrete]
[#WindRefFrameRotIEC]
=== `WindRefFrameRotIEC`
+++Reference frame rotation model associated with this wind turbine type 3 or type 4 model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindTurbineType3or4IEC.WindRefFrameRotIEC`
| Cardinality
| 1
| Type
| xref::class/WindRefFrameRotIEC.adoc[`WindRefFrameRotIEC`]

| Inherited from
| xref::class/WindTurbineType3or4IEC.adoc[`WindTurbineType3or4IEC`]


|===

////
[.text-left]
--
<<slots_table.WindRefFrameRotIEC,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/WindAeroOneDimIEC.adoc[`WindAeroOneDimIEC`] | xref::class/WindAeroOneDimIEC.adoc#WindTurbineType3IEC[`WindTurbineType3IEC`]



| xref::class/WindAeroTwoDimIEC.adoc[`WindAeroTwoDimIEC`] | xref::class/WindAeroTwoDimIEC.adoc#WindTurbineType3IEC[`WindTurbineType3IEC`]



| xref::class/WindContPitchAngleIEC.adoc[`WindContPitchAngleIEC`] | xref::class/WindContPitchAngleIEC.adoc#WindTurbineType3IEC[`WindTurbineType3IEC`]



| xref::class/WindContPType3IEC.adoc[`WindContPType3IEC`] | xref::class/WindContPType3IEC.adoc#WindTurbineType3IEC[`WindTurbineType3IEC`]



| xref::class/WindGenType3IEC.adoc[`WindGenType3IEC`] | xref::class/WindGenType3IEC.adoc#WindTurbineType3IEC[`WindTurbineType3IEC`]



| xref::class/WindMechIEC.adoc[`WindMechIEC`] | xref::class/WindMechIEC.adoc#WindTurbineType3IEC[`WindTurbineType3IEC`]


|===

